# swagger.yaml
@@ -5,7 +5,7 @@ info:
   version: 1.0.0
   
 servers:
-  - url: https://ordermanagementapi.somee.com/api
+  - url: http://OrderManagementApi-Staged.somee.com
 
 tags:
   - name: Auth
@@ -117,48 +117,6 @@ paths:
                       type: string
         '401':
           description: Credenciais inválidas
-        '500':
-          description: Erro interno do servidor
-
-  /Auth/refresh:
-    post:
-      tags:
-        - Auth
-      summary: Renovar token
-      description: Renova um token expirado usando o refresh token
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/RefreshTokenRequest'
-      responses:
-        '200':
-          description: Token renovado com sucesso
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  accessToken:
-                    type: string
-                  expiration:
-                    type: string
-                    format: date-time
-                  refreshToken:
-                    type: string
-                  user:
-                    type: object
-                    properties:
-                      id:
-                        type: integer
-                        format: int64
-                      cpf:
-                        type: string
-        '400':
-          description: Dados inválidos fornecidos
-        '401':
-          description: Token inválido ou expirado
         '500':
           description: Erro interno do servidor
 
@@ -582,21 +540,6 @@ components:
           description: Senha do usuário
           format: password
           example: "Senha@123"
-    
-    RefreshTokenRequest:
-      type: object
-      required:
-        - accessToken
-        - refreshToken
-      properties:
-        accessToken:
-          type: string
-          description: Token de acesso JWT
-          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-        refreshToken:
-          type: string
-          description: Token de atualização
-          example: "6ce5c5a0-c8e0-4c4f-9512-5a33dc4a0120"
     
     ResetPasswordRequest:
       type: object
